--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <li class="user-menu">
         <span class="user-btn">Log In / Sign Up <i class="fas fa-caret-down"></i></span>
         <div class="dropdown">
-          <a href="#login">Log In</a>
-          <a href="#signup">Sign Up</a>
+          <a href="login.html">Log In</a>
+          <a href="signup.html">Sign Up</a>
         </div>
       </li>
       <li class="language-selector">
