--- a/verify.html
+++ b/verify.html
@@ -3,34 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OTP Verification</title>
+  <title>Verify OTP</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>OTP Verification</h2>
-    <p>We've sent an OTP code to your email. Please enter it below to verify your account:</p>
-    <form id="otpForm">
-      <label for="otp">OTP Code:</label>
-      <input type="text" id="otp" name="otp" required />
-      <button type="submit">Verify OTP</button>
+    <h2>Verify OTP</h2>
+    <form id="verifyForm">
+      <label for="otp">Enter the 6-digit OTP sent to your email:</label>
+      <input type="text" id="otp" name="otp" maxlength="6" required />
+      <button type="submit">Verify</button>
     </form>
   </div>
-  
-  <script>
-    document.getElementById('otpForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-      const enteredOtp = document.getElementById('otp').value.trim();
-      const storedOtp = localStorage.getItem('signupOtp');
 
-      if (enteredOtp === storedOtp) {
-        alert('Account verified successfully!');
-        // Xóa OTP đã lưu (cho bảo mật)
-        localStorage.removeItem('signupOtp');
-        // Sau khi xác nhận OTP, chuyển hướng người dùng đến trang đăng nhập hoặc trang chủ
-        window.location.href = 'login.html';
+  <script>
+    document.getElementById("verifyForm").addEventListener("submit", (e) => {
+      e.preventDefault();
+      const userOTP = document.getElementById("otp").value;
+      const storedOTP = localStorage.getItem("signupOTP");
+      if (userOTP === storedOTP) {
+        alert("Verification successful!");
+        localStorage.removeItem("signupOTP");
+        window.location.href = "index.html";
       } else {
-        alert('Incorrect OTP. Please try again.');
+        alert("Incorrect OTP. Please sign up again.");
+        localStorage.removeItem("signupOTP");
+        localStorage.removeItem("signupEmail");
+        window.location.href = "signup.html";
       }
     });
   </script>
