--- a/signup.html
+++ b/signup.html
@@ -10,20 +10,6 @@
 </head>
 <body>
   <div class="container">
-    <!-- Sign In Form -->
-    <h2>Sign In</h2>
-    <form id="signInForm">
-      <label for="signin-email">Email:</label>
-      <input type="email" id="signin-email" name="email" required />
-      
-      <label for="signin-password">Password:</label>
-      <input type="password" id="signin-password" name="password" required />
-      
-      <button type="submit" id="signInButton">Sign In</button>
-    </form>
-
-    <hr />
-
     <!-- Sign Up Form -->
     <h2>Sign Up</h2>
     <form id="signUpForm">
@@ -48,7 +34,7 @@
 
   <script type="module">
     // Import Firebase modules from the modular SDK
-    import { initializeApp } from "firebase/app"
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
     import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
